Context Logics migrated to TypeScript Announcement Card connected with API

--- a/src/pages/Tab.css
+++ b/src/pages/Tab.css
@@ -109,4 +109,10 @@
       -ms-flex: 1;
           flex: 1;
 }
-/*# sourceMappingURL=Tab1.css.map */
+
+.album-list {
+  overflow-y: auto;
+  padding: 16px;
+  height: 100%;
+}
+/*# sourceMappingURL=Tab.css.map */
