--- a/src/pages/Tab.css
+++ b/src/pages/Tab.css
@@ -91,7 +91,7 @@
 
 .announcement-list .school-card .author {
   background-color: #e74c3c;
-  padding: 12px;
+  padding: 8px 12px;
   margin: 12px 0 0 0px;
   color: #fff;
   border-radius: 0 0 16px 16px;
@@ -114,5 +114,39 @@
   overflow-y: auto;
   padding: 16px;
   height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.album-list .album-card {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  min-width: 98%;
+  margin: 1%;
+  border-radius: 8px;
+  padding: 4px;
+  background-color: #fff;
+  -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+          box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+}
+
+.album-list .album-card .album-thumbnail {
+  border-radius: 8px 8px 0 0;
+}
+
+.album-list .album-card .album-title {
+  font-weight: bold;
+  margin: 8px 0 4px 8px;
+  font-size: 1rem;
+}
+
+.album-list .album-card .album-date {
+  color: #262626;
+  margin: 0 0 4px 8px;
+  font-size: 0.8rem;
 }
 /*# sourceMappingURL=Tab.css.map */
