--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -13,12 +13,18 @@ http://ionicframework.com/docs/theming/ */
 }
 :root {
   /** primary **/
-  --ion-color-primary: #3880ff;
+  --ion-color-primary: #e74c3c;
+  --ion-color-primary-rgb: 231, 76, 60;
+  --ion-color-primary-contrast: #ffffff;
+  --ion-color-primary-contrast-rgb: 255, 255, 255;
+  --ion-color-primary-shade: #e64333;
+  --ion-color-primary-tint: #eb6d60;
+  /* --ion-color-primary: #3880ff;
   --ion-color-primary-rgb: 56, 128, 255;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
   --ion-color-primary-shade: #3171e0;
-  --ion-color-primary-tint: #4c8dff;
+  --ion-color-primary-tint: #4c8dff; */
 
   /** secondary **/
   --ion-color-secondary: #3dc2ff;
