--- a/src/pages/Tab.scss
+++ b/src/pages/Tab.scss
@@ -51,6 +51,7 @@ $color: #e74c3c;
   //   -webkit-overflow-scrolling: touch;
   //   overflow-y: auto;
 }
+
 .announcement-list {
   overflow-y: auto;
   padding: 16px;
@@ -81,6 +82,19 @@ $color: #e74c3c;
       margin: 12px 12px 0 12px;
       font-weight: bold;
       font-size: 2rem;
+    }
+    .post-image-card-list {
+      margin: 12px 12px 0 12px;
+      flex: 1;
+      display: flex;
+      .post-image-card {
+        padding: 2px;
+        .post-image-thumbnail {
+          background-color: #c1c1c1;
+          --size: 100%;
+          height: 160px;
+        }
+      }
     }
     .card-message {
       margin: 12px 12px 0 12px;
