--- a/src/pages/Tab.css
+++ b/src/pages/Tab.css
@@ -1,6 +1,6 @@
 .header {
   background-color: #e74c3c;
-  height: 25%;
+  height: 35%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -56,6 +56,29 @@
   font-size: 1.5rem;
 }
 
+.header .screen-name {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: auto 0;
+}
+
+.header .screen-name .title {
+  color: #fff;
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin: 8px 0;
+}
+
+.header .screen-name .description {
+  color: #fff;
+  font-size: 1rem;
+}
+
 .page-container {
   overflow: hidden;
   height: 100%;
@@ -65,6 +88,38 @@
   height: 85%;
   -webkit-transform: translate(0, -10%);
           transform: translate(0, -10%);
+}
+
+body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+body .sign-in-card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 70%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+body .sign-in-card .user-avatar {
+  width: 80px;
+  height: 80px;
+  color: #e74c3c;
+  border-radius: 50%;
+  border: 1px solid #e74c3c;
+}
+
+body .sign-in-card .form-container-grid {
+  width: 100%;
 }
 
 .announcement-list {
