--- a/src/pages/Tab.css
+++ b/src/pages/Tab.css
@@ -1,6 +1,6 @@
 .header {
   background-color: #e74c3c;
-  height: 35%;
+  height: 25%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -56,7 +56,150 @@
   font-size: 1.5rem;
 }
 
-.header .screen-name {
+.page-container {
+  overflow: hidden;
+  height: 100%;
+}
+
+.intro-avatar-container {
+  height: 70%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background-color: #e74c3c;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 16px;
+}
+
+.intro-avatar-container .intro-title {
+  color: #fff;
+  font-size: 2rem;
+  font-weight: bolder;
+}
+
+.intro-avatar-container .intro-subtitle {
+  color: #fff;
+  font-size: 1.5rem;
+}
+
+.intro-avatar-container .intro-avatar {
+  height: 80%;
+  width: 80%;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
+.get-started-container {
+  height: 30%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 16px;
+}
+
+.get-started-container .get-started-message {
+  font-size: 1.8rem;
+  -ms-grid-column-align: center;
+      justify-self: center;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
+.get-started-container .get-started-btn {
+  margin-top: 16px;
+  justify-self: flex-end;
+}
+
+.body {
+  height: 85%;
+  -webkit-transform: translate(0, -10%);
+          transform: translate(0, -10%);
+}
+
+.login-body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.login-body .sign-in-card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.login-body .sign-in-card .user-avatar {
+  width: 100%;
+  height: 100px;
+  color: #e74c3c;
+}
+
+.login-body .sign-in-card .form-container-grid {
+  width: 100%;
+}
+
+.login-body .sign-in-card .form-container-grid .form-input {
+  --font-size: 1.2rem;
+  margin: 10% 0;
+}
+
+.login-body .sign-in-card .form-container-grid .btn-actions {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+.login-body {
+  height: 75%;
+  -webkit-transform: translate(0, -15%);
+          transform: translate(0, -15%);
+}
+
+.login-header {
+  background-color: #e74c3c;
+  height: 35%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 24px 24px 0 24px;
+  border-bottom-left-radius: 5%;
+  border-bottom-right-radius: 5%;
+}
+
+.login-header .screen-name {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -67,59 +210,16 @@
   margin: auto 0;
 }
 
-.header .screen-name .title {
+.login-header .screen-name .title {
   color: #fff;
   font-size: 1.5rem;
   font-weight: bold;
   margin: 8px 0;
 }
 
-.header .screen-name .description {
+.login-header .screen-name .description {
   color: #fff;
   font-size: 1rem;
-}
-
-.page-container {
-  overflow: hidden;
-  height: 100%;
-}
-
-.body {
-  height: 85%;
-  -webkit-transform: translate(0, -10%);
-          transform: translate(0, -10%);
-}
-
-body {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-body .sign-in-card {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  height: 70%;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-body .sign-in-card .user-avatar {
-  width: 80px;
-  height: 80px;
-  color: #e74c3c;
-  border-radius: 50%;
-  border: 1px solid #e74c3c;
-}
-
-body .sign-in-card .form-container-grid {
-  width: 100%;
 }
 
 .announcement-list {
