--- a/src/pages/Tab.scss
+++ b/src/pages/Tab.scss
@@ -2,7 +2,7 @@ $color: #e74c3c;
 
 .header {
   background-color: $color;
-  height: 35%;
+  height: 25%;
   display: flex;
   flex-direction: column;
   padding: 24px 24px 0 24px;
@@ -37,6 +37,110 @@ $color: #e74c3c;
       }
     }
   }
+}
+.page-container {
+  overflow: hidden;
+  height: 100%;
+}
+.intro-avatar-container {
+  height: 70%;
+  display: flex;
+  flex-direction: column;
+  background-color: $color;
+  // border-bottom-left-radius: 110px;
+  // border-bottom-right-radius: 110px;
+  // justify-content: flex-end;
+  justify-content: center;
+  // align-items: center;
+  padding: 16px;
+  .intro-title {
+    color: #fff;
+    font-size: 2rem;
+    font-weight: bolder;
+  }
+  .intro-subtitle {
+    color: #fff;
+    // font-weight: bolder;
+    font-size: 1.5rem;
+  }
+  .intro-avatar {
+    height: 80%;
+    width: 80%;
+    // background-color: #c1c1c1;
+    align-self: center;
+    // margin-bottom: -25%;
+  }
+}
+.get-started-container {
+  height: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 16px;
+
+  .get-started-message {
+    font-size: 1.8rem;
+    // flex: 1;
+    justify-self: center;
+    align-self: center;
+    // background-color: #c1c1c1;
+    // flex: 1;
+  }
+  .get-started-btn {
+    margin-top: 16px;
+    justify-self: flex-end;
+  }
+}
+.body {
+  //   background-color: #000;
+  //   margin: 16px;
+  height: 85%;
+  transform: translate(0, -10%);
+  //   overflow-y: hidden;
+  //   -webkit-overflow-scrolling: touch;
+  //   overflow-y: auto;
+}
+.login-body {
+  display: flex;
+  flex-direction: column;
+  .sign-in-card {
+    // background-color: #c1c1c1;
+    display: flex;
+    flex-direction: column;
+    .user-avatar {
+      width: 100%;
+      height: 100px;
+      color: $color;
+      // border: 1px solid $color;
+      // margin-top: -50%;
+    }
+    .form-container-grid {
+      width: 100%;
+      .form-input {
+        --font-size: 1.2rem;
+        margin: 10% 0;
+      }
+      .btn-actions {
+        display: flex;
+        justify-content: space-evenly;
+      }
+    }
+    // height: 70%;
+    align-items: center;
+  }
+}
+.login-body {
+  height: 75%;
+  transform: translate(0, -15%);
+}
+.login-header {
+  background-color: $color;
+  height: 35%;
+  display: flex;
+  flex-direction: column;
+  padding: 24px 24px 0 24px;
+  border-bottom-left-radius: 5%;
+  border-bottom-right-radius: 5%;
 
   .screen-name {
     display: flex;
@@ -55,40 +159,6 @@ $color: #e74c3c;
       color: #fff;
       font-size: 1rem;
     }
-  }
-}
-.page-container {
-  overflow: hidden;
-  height: 100%;
-}
-.body {
-  //   background-color: #000;
-  //   margin: 16px;
-  height: 85%;
-  transform: translate(0, -10%);
-  //   overflow-y: hidden;
-  //   -webkit-overflow-scrolling: touch;
-  //   overflow-y: auto;
-}
-body {
-  display: flex;
-  .sign-in-card {
-    // background-color: #c1c1c1;
-    display: flex;
-    flex-direction: column;
-    .user-avatar {
-      width: 80px;
-      height: 80px;
-      color: $color;
-      border-radius: 50%;
-      border: 1px solid $color;
-      // margin-top: -50%;
-    }
-    .form-container-grid {
-      width: 100%;
-    }
-    height: 70%;
-    align-items: center;
   }
 }
 
