--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -91,6 +91,10 @@ http://ionicframework.com/docs/theming/ */
   --ion-color-light-tint: #f5f6f9;
 }
 
+:root ion-input {
+  font-size: 1.6rem;
+}
+
 /* @media (prefers-color-scheme: dark) { */
 /*
    * Dark Colors
