--- a/src/pages/Tab.css
+++ b/src/pages/Tab.css
@@ -410,12 +410,25 @@
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
-.gallery-slides .image-slide .gallery-image-container .gallery-image {
-  -ms-grid-column-align: center;
-      justify-self: center;
-  height: 80%;
+.gallery-slides .image-slide .gallery-image-container .gallery-image-holder {
+  -ms-flex-item-align: center;
+      align-self: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: auto 0;
 }
 
 .gallery-slides .image-slide .gallery-image-container .image-actions {
@@ -432,6 +445,10 @@
   color: #fff;
   height: 48px;
   width: 48px;
+}
+
+.gallery-image {
+  min-height: 10vh;
 }
 
 .album-card {
