Announcements and Class Announcements section: Pagination implemented and deployed to PWA

--- a/src/pages/Tab.css
+++ b/src/pages/Tab.css
@@ -423,6 +423,8 @@
 }
 
 .gallery-slides .image-slide .gallery-image-container .gallery-image-holder {
+  -ms-touch-action: pan-x pan-y pinch-zoom;
+      touch-action: pan-x pan-y pinch-zoom;
   -ms-flex-item-align: center;
       align-self: center;
   display: -webkit-box;
