--- a/src/pages/Tab.css
+++ b/src/pages/Tab.css
@@ -390,67 +390,63 @@
   color: #262626;
 }
 
-.gallery-slides {
-  height: 100%;
+.spinner-color-white {
+  color: #fff;
 }
 
-.gallery-slides .image-slide {
+.gallery-page {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  height: 100%;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  background-color: #000;
 }
 
-.gallery-slides .image-slide .gallery-image-container {
-  background-color: #000;
+.gallery-page .image-actions {
+  position: fixed;
   width: 100%;
+  z-index: 1000;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  color: #fff;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+          order: 2;
+  padding: 16px;
+}
+
+.gallery-page .image-actions .download-icon,
+.gallery-page .image-actions .back-icon {
+  height: 40px;
+  width: 40px;
+}
+
+.gallery-page .slides-container {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+          order: 1;
 }
 
-.gallery-slides .image-slide .gallery-image-container .gallery-image-holder {
-  -ms-touch-action: pan-x pan-y pinch-zoom;
-      touch-action: pan-x pan-y pinch-zoom;
-  -ms-flex-item-align: center;
-      align-self: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin: auto 0;
-}
-
-.gallery-slides .image-slide .gallery-image-container .image-actions {
-  padding: 16px 16px 0 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-}
-
-.gallery-slides .image-slide .gallery-image-container .image-actions .download-icon {
-  color: #fff;
-  height: 48px;
-  width: 48px;
-}
-
-.gallery-image {
+.gallery-page .slides-container .image-slide {
   width: 100vw;
+}
+
+.gallery-page .slides-container .image-slide .gallery-image {
+  width: 100%;
 }
 
 .album-card {
